# ELF2_AI

./: .gitattributes  .gitignore  README.md
qianrushi_Qt/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp  qianrushi.pro  resources.qrc
qianrushi_Qt/assets/: road_network.json
qianrushi_Qt/core/: BackendConfig.cpp  BackendConfig.h  CallClient.cpp  CallClient.h  Haversine.h  MockChatService.cpp  MockChatService.h  MockDataService.cpp  MockDataService.h  NavigationController.cpp  NavigationController.h  OsrmRoutingService.cpp  OsrmRoutingService.h  PathFinder.cpp  PathFinder.h  RealNavigationService.cpp  RealNavigationService.h  RoadGraph.cpp  RoadGraph.h  SerialEnvReader.cpp  SerialEnvReader.h  TerminalLocationService.cpp  TerminalLocationService.h  TileMapProvider.cpp  TileMapProvider.h  VoiceClient.cpp  VoiceClient.h
qianrushi_Qt/models/: ChatMessage.h  POIInfo.h  RouteInfo.h
qianrushi_Qt/pages/: CallPage.cpp  CallPage.h  ChatHomePage.cpp  ChatHomePage.h  ChatReplyPage.cpp  ChatReplyPage.h  EnvMonitorPage.cpp  EnvMonitorPage.h  MapHomePage.cpp  MapHomePage.h  RouteDetailPage.cpp  RouteDetailPage.h  RoutePlanPage.cpp  RoutePlanPage.h
qianrushi_Qt/scripts/: README_call.md  start_call_client_lubancat.sh  start_call_service_node.sh  start_qianrushi_lubancat_local_backend.sh
qianrushi_Qt/styles/: style.qss
qianrushi_Qt/tiles/: README.md
qianrushi_Qt/widgets/: HeaderBar.cpp  HeaderBar.h  MapWidget.cpp  MapWidget.h  POICard.cpp  POICard.h  RouteStepItem.cpp  RouteStepItem.h  VoiceButton.cpp  VoiceButton.h
qianrushi_go/: README.md  go.mod  go.sum  main.go
qianrushi_go/cmd/rag_eval/: main.go
qianrushi_go/eval/: rag_cases.json
qianrushi_go/internal/alert/: manager.go
qianrushi_go/internal/asr/: recognizer.go  recognizer_stub.go
qianrushi_go/internal/dialogue/: controller.go
qianrushi_go/internal/envws/: handler.go  handler_test.go
qianrushi_go/internal/llm/: client.go  request.go  request_test.go  rkllm_cli.go  rkllm_cli_test.go  rkllm_daemon.go
qianrushi_go/internal/mqtt/: client.go  client_test.go
qianrushi_go/internal/rag/: answerability.go  answerability_test.go  config.go  content_test.go  embedding.go  knowledge.go  knowledge_test.go  prompt.go  remote_embedder.go  remote_embedder_test.go  retriever.go  retriever_test.go  runtime.go  runtime_test.go  store.go  store_test.go
qianrushi_go/internal/serial/: reader.go
qianrushi_go/internal/tts/: fallback.go  fallback_test.go  synthesizer.go  synthesizer_stub.go
qianrushi_go/internal/vad/: detector.go  detector_stub.go
qianrushi_go/internal/websocket/: env_store.go  handler.go  handler_cmd_test.go  handler_env_test.go  handler_rag_test.go
qianrushi_go/knowledge/: emergency_procedures.json  equipment_operations.json  faq.json  park_info.json  safety_rules.json  visitor_services.json
qianrushi_go/scripts/: build_voice_engine.ps1  build_voice_engine_linux.sh  download_voice_models.ps1  download_voice_models_linux.sh  start_embedding_server.ps1  start_voice_engine.ps1  start_voice_engine_linux.sh  start_voice_engine_lubancat_remote_llm.sh  start_voice_engine_rkllm_linux.sh
